# FashionBot

./: main.py  pyproject.toml  test.py
src/config/: settings.py
src/handlers/: __init__.py  mainrouter.py
src/keyboards/: __init__.py  category_keyboard.py  location_keyboard.py  menu_keyboard.py
src/middleware/: logger.py
src/services/: api_client.py
