[tool.poetry]
name = "fashionbot"
version = "0.1.0"
description = ""
authors = ["Matvey <jefflol003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.10.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.3.4"
aiohttp = "^3.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
